Fix quotation marks: replace guillemets with proper Polish and English quotes

--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                     <div class="problem__icon">
                         <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#F04545" stroke-width="2" stroke-linecap="round"><circle cx="12" cy="12" r="10"/><line x1="12" y1="8" x2="12" y2="12"/><line x1="12" y1="16" x2="12.01" y2="16"/></svg>
                     </div>
-                    <h3 data-pl="&laquo;Wypiłem tylko dwa piwa&raquo;"
-                        data-en="&laquo;I only had two beers&raquo;">
-                        &laquo;Wypiłem tylko dwa piwa&raquo;
+                    <h3 data-pl="„Wypiłem tylko dwa piwa""
+                        data-en="&ldquo;I only had two beers&rdquo;">
+                        „Wypiłem tylko dwa piwa"
                     </h3>
                     <p data-pl="Każdy tak mówi. Ale 73% kierowców zatrzymanych z ponadnormatywnym stężeniem alkoholu uważało, że są trzeźwi."
                        data-en="Everyone says that. But 73% of drivers stopped over the limit believed they were sober.">
@@ -251,9 +251,9 @@
                         data-en="Read a tongue twister">
                         Przeczytaj łamaniec językowy
                     </h3>
-                    <p data-pl="Aplikacja wyświetla losowy łamaniec językowy. Przeczytaj go na głos — to stwarza &laquo;test obciążeniowy&raquo; dla Twojej mowy."
-                       data-en="The app shows a random tongue twister. Read it aloud — this creates a &laquo;stress test&raquo; for your speech.">
-                        Aplikacja wyświetla losowy łamaniec językowy. Przeczytaj go na głos — to stwarza &laquo;test obciążeniowy&raquo; dla Twojej mowy.
+                    <p data-pl="Aplikacja wyświetla losowy łamaniec językowy. Przeczytaj go na głos — to stwarza „test obciążeniowy" dla Twojej mowy."
+                       data-en="The app shows a random tongue twister. Read it aloud — this creates a &ldquo;stress test&rdquo; for your speech.">
+                        Aplikacja wyświetla losowy łamaniec językowy. Przeczytaj go na głos — to stwarza „test obciążeniowy" dla Twojej mowy.
                     </p>
                 </div>
                 <div class="step">
@@ -373,9 +373,9 @@
                 <div class="transformation__before">
                     <h4 data-pl="Bez Sprawdź" data-en="Without Sprawdź">Bez Sprawdź</h4>
                     <ul>
-                        <li data-pl="&laquo;Chyba jestem w porządku...&raquo;"
-                            data-en="&laquo;I think I'm probably fine...&raquo;">
-                            &laquo;Chyba jestem w porządku...&raquo;
+                        <li data-pl="„Chyba jestem w porządku...""
+                            data-en="&ldquo;I think I&rsquo;m probably fine...&rdquo;">
+                            „Chyba jestem w porządku..."
                         </li>
                         <li data-pl="Pytasz znajomych, którzy też pili"
                             data-en="You ask friends who've also been drinking">
@@ -501,9 +501,9 @@
             <div class="footer__bottom">
                 <p>&copy; 2026 Sprawdź. <span data-pl="Wszystkie prawa zastrzeżone." data-en="All rights reserved.">Wszystkie prawa zastrzeżone.</span></p>
                 <p class="footer__research"
-                   data-pl="Na podstawie: Suffoletto et al., &laquo;Detecting alcohol intoxication from voice&raquo;, Stanford University, 2023."
-                   data-en="Based on: Suffoletto et al., &laquo;Detecting alcohol intoxication from voice&raquo;, Stanford University, 2023.">
-                    Na podstawie: Suffoletto et al., &laquo;Detecting alcohol intoxication from voice&raquo;, Stanford University, 2023.
+                   data-pl="Na podstawie: Suffoletto et al., „Detecting alcohol intoxication from voice", Stanford University, 2023."
+                   data-en="Based on: Suffoletto et al., &ldquo;Detecting alcohol intoxication from voice,&rdquo; Stanford University, 2023.">
+                    Na podstawie: Suffoletto et al., „Detecting alcohol intoxication from voice", Stanford University, 2023.
                 </p>
             </div>
         </div>
